Update from bears to cats

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,9 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Cat Images!</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
+      Use images of either <strong>Siamese</strong> cats, <strong>Short Hair</strong> cats, <strong>Persian</strong> cats, or
       all three!
     </p>
     <div class='content'>
@@ -21,7 +21,7 @@
                accept='image/*'
                onchange='showPicked(this)'>
       </div>
-      <button class='choose-file-button' type='button' onclick='showPicker()'>Select Image</button>
+      <button class='choose-file-button' type='button' onclick='showPicker()'>Select Image of Cat!</button>
       <div class='upload-label'>
         <label id='upload-label'>No file chosen</label>
       </div>
