--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #00000F;
+    background-color: #2e3f5c;
 }
 
 .no-display {
@@ -17,7 +17,7 @@ body {
     font-size: 30px;
     margin-top: 1em;
     margin-bottom: 1em;
-    color: #262626;
+    color: #ffffff;
 }
 
 .content {
