--- a/app/static/style.css
+++ b/app/static/style.css
@@ -31,12 +31,14 @@ body {
 .upload-label {
     padding: 10px;
     font-size: 12px;
+    color: #ffffff
 }
 
 .result-label {
     margin-top: 0.5em;
     padding: 10px;
     font-size: 13px;
+    color: #ffffff
 }
 
 button.choose-file-button {
@@ -44,9 +46,9 @@ button.choose-file-button {
     height: 40px;
     border-radius: 2px;
     background-color: #ffffff;
-    border: solid 1px #7052CB;
+    border: solid 1px #ffffff;
     font-size: 25px;
-    color: #7052CB;
+    color: #000000;
 }
 
 button.analyze-button {
